removed all <br> and <ol>,<ul>
after solving margin issue I was able to remove superfluous <br> tags.
also took the chance to remove ordered and unordered lists from the
instructions area.

--- a/templates/search/checkins.tmpl
+++ b/templates/search/checkins.tmpl
@@ -63,16 +63,16 @@ $('document').ready(function(){
     </div>
 
     <div id="myDiv">
-      <br/>
+    
       <div id="mylistDiv"></div>
     </div>
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ul>
-      <li>When an item is returned to your library, first check it in to your ILS, then click "Checked in to ILS."</li>
-      <li>As items are checked in here, they are removed from this list and moved to history.</li>
-    </ul>
+  
+      <p>When an item is returned to your library, first check it in to your ILS, then click "Checked in to ILS."</p>
+      <p>As items are checked in here, they are removed from this list and moved to history.</p>
+  
   </div>
 
 </div>
