--- a/templates/search/holds.tmpl
+++ b/templates/search/holds.tmpl
@@ -69,16 +69,16 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv"><br />
+    <div id="myDiv">
       <div id="mylistDiv"></div>
     </div>
     
 <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>If a lending library placed a hold for you, that request will be shown here.</li>
-      <li>When the lender fills the hold (i.e. ships the title to you), it will be removed from this list and added to your 'Receiving' tab.</li>
-    </ol>
+
+      <p>If a lending library placed a hold for you, that request will be shown here.</p>
+      <p>When the lender fills the hold (i.e. ships the title to you), it will be removed from this list and added to your 'Receiving' tab.</p>
+
 </div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
