--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -64,7 +64,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv"><br/>
+    <div id="myDiv">
       <div id="mylistDiv"></div>
     </div>
 
