--- a/templates/search/overdue.tmpl
+++ b/templates/search/overdue.tmpl
@@ -64,16 +64,16 @@ $('document').ready(function(){
     </div>
 
     <div id="myDiv">
-      <br/>
+  
       <div id="mylistDiv"></div>
     </div>
 
 <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>These items are now overdue, and you will need to contact these patrons.</li>
-      <li>To return the items, got to the Returns tab and click 'Returned'.</li>
-    </ol>
+
+      <p>These items are now overdue, and you will need to contact these patrons.</p>
+      <p>To return the items, got to the Returns tab and click 'Returned'.</p>
+
 </div>
 
 </div>
