--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -81,7 +81,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv"><br />
+    <div id="myDiv">
       <p>Select your due-date slip printing option:</p>
       <div id="slipPrinting"></div>
       <div id="multiCount"></div>
@@ -94,10 +94,10 @@ $('document').ready(function(){
 
 <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>As items arrive, receive them by clicking the 'Received' button. Once items are received, they will be removed from this list and you will have the option of printing a due date slip.</li>
-      <li>You can see the status of all of your active ILLs in the 'Current' tab.</li>
-    </ol>
+
+      <p>As items arrive, receive them by clicking the 'Received' button. Once items are received, they will be removed from this list and you will have the option of printing a due date slip.</p>
+      <p>You can see the status of all of your active ILLs in the 'Current' tab.</p>
+
 </div>
 
 <!-- slipbox and multiPrint are used by receiving.js to enable slip printing
