--- a/templates/search/renew-answer.tmpl
+++ b/templates/search/renew-answer.tmpl
@@ -69,7 +69,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv"><br />
+    <div id="myDiv">
       <h3>1. Set a default due date</h3>
       <div id="defaultDueDate">
 	<form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change due date'; return false;">
@@ -91,11 +91,9 @@ $('document').ready(function(){
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ul>
-      <li>If you want to change the due date of items, set the due date and click "Apply due date."  This will change the due dates for all the items in the table.</li>
-      <li>For each of the requests that you are renewing, click the "Renew OK" button.</li>
-      <li>For each remaining request - those that will be unfilled - click the "Can't renew".</li>
-    </ul>
+      <p>If you want to change the due date of items, set the due date and click "Apply due date."  This will change the due dates for all the items in the table.</p>
+      <p>For each of the requests that you are renewing, click the "Renew OK" button.</p>
+      <p>For each remaining request - those that will be unfilled - click the "Can't renew".</p>
   </div>
 
 </div>
