--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -67,7 +67,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv"><br />
+    <div id="myDiv">
     <div class="innerLeft tone-box">
 	   <h3>Set the due date</h3>
 	<div id="defaultDueDate">
@@ -92,13 +92,13 @@ $('document').ready(function(){
 
 <div id="instructions" class="tone-box">
     <h3>Instructions</h3>
-    <ul>
-      <li>If you want to change the due date of items, set the due date and click 'Apply due date.'  This will change the due dates for all items in the table.</li>
-      <li>For each of the requests that you are filling, click the "Sent" button.</li>
-      <li>The "Oops!" button will return the request to the Respond list.</li>
-      <li>Hover over a library's symbol to see the full name of the library.</li>
-      <li>As requests are handled, they are removed from this list.  You can see the status of all of your active ILLs in the 'Current' tab.</li>
-    </ul>
+
+      <p>If you want to change the due date of items, set the due date and click 'Apply due date.'  This will change the due dates for all items in the table.</p>
+      <p>For each of the requests that you are filling, click the "Sent" button.</p>
+      <p>The "Oops!" button will return the request to the Respond list.</p>
+      <p>Hover over a library's symbol to see the full name of the library.</p>
+      <p>As requests are handled, they are removed from this list.  You can see the status of all of your active ILLs in the 'Current' tab.</p>
+
 </div>
 
 </div>
