--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -65,7 +65,7 @@ $('document').ready(function(){
 
 <div id="center" role="main">
 
-    <div id="waitDiv"><br/>      Loading... <img src="/wait.gif">
+    <div id="waitDiv">     Loading... <img src="/wait.gif">
     </div>
 
     <div id="myDiv"><br />
@@ -74,10 +74,10 @@ $('document').ready(function(){
 
   <div id="instructions" class="tone-box">
     <h3>Instructions</h3>
-    <ol>
-      <li>If a lending library was unable to fill your request, that request will be shown here.</li>
-      <li>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No other lenders".</li>
-    </ol>
+
+      <p>If a lending library was unable to fill your request, that request will be shown here.</p>
+      <p>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No other lenders".</p>
+
   </div>
 
 
