--- a/templates/search/on_hold.tmpl
+++ b/templates/search/on_hold.tmpl
@@ -69,12 +69,12 @@ $('document').ready(function(){
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ul>
-      <li>If you have placed a hold in your ILS for an ILL request, that request will be listed.</li>
-      <li>When you capture the hold in your ILS (i.e. you have the book in hand, ready to fill the ILL request), click the 'Ready to ship' button.  This will move the request to your 'Shipping' tab.</li>
-      <li>If you see a 'Cancelled by borrower' button instead, this means that you don't need to ship the book.  Click the button, and check the book back into your ILS.</li>
-      <li>As requests are handled, they are removed from this list.  You can see the status of all of your active ILLs in the 'Current' tab.</li>
-    </ul>
+    
+      <p>If you have placed a hold in your ILS for an ILL request, that request will be listed.</p>
+      <p>When you capture the hold in your ILS (i.e. you have the book in hand, ready to fill the ILL request), click the 'Ready to ship' button.  This will move the request to your 'Shipping' tab.</p>
+      <p>If you see a 'Cancelled by borrower' button instead, this means that you don't need to ship the book.  Click the button, and check the book back into your ILS.</p>
+      <p>As requests are handled, they are removed from this list.  You can see the status of all of your active ILLs in the 'Current' tab.</p>
+    
   </div>
 
 </div>
