--- a/htdocs/css/fILL-public-datatables.1.0.css
+++ b/htdocs/css/fILL-public-datatables.1.0.css
@@ -7,8 +7,8 @@ div#waitDiv
   display: block;
 }
 div#mylistDiv {
-  margin-left: auto ;
-  margin-right: auto ;
+	width: 100%;
+  margin: auto ;
   display: none;
 }
 #gradient-style {
