--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -29,10 +29,17 @@ $('document').ready(function() {
 	<ul>
 	<li><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></li>
 	<li><a href="?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
-    <li><a href="?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
-    <li><a href="?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
+	<li><a href="?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
+	<li><a href="?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
 	</ul>
 
+	<p><strong>Counting Opinions</strong></p> 	
+	<ul> 	
+	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li> 	
+	  <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li> 	
+	  <li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li> 	
+	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">eLibraries Manitoba monthly statistics</a></li> 	
+	</ul>
 </div>
 
 <div id="main-right" class="tone-box" role="complimentary">
