--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -68,7 +68,7 @@ $('document').ready(function(){
     <div id="waitDiv">     Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv"><br />
+    <div id="myDiv">
       <div id="mylistDiv"></div>
     </div>
 
