added instruction id to page, removed uls

--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -103,12 +103,14 @@ $('document').ready(function(){
       </div>
     </div>
 
+<div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ul>
-      <li>In your ILS, you should have other libraries (borrowers) set up as patrons.</li>
-      <li>You can enter the barcodes for those patron records here, by clicking on the "barcode" cell for that library.</li>
-      <li>These are the patron barcodes that will appear on your fILL pull list.</li>
-    </ul>
+
+      <p>In your ILS, you should have other libraries (borrowers) set up as patrons.</p>
+      <p>You can enter the barcodes for those patron records here, by clicking on the "barcode" cell for that library.</p>
+      <p>These are the patron barcodes that will appear on your fILL pull list.</p>
+
+</div>
 
 </div>
 
