--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -64,10 +64,10 @@ $('document').ready(function(){
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>Click on the email address to send a new email to the library.</li>
-      <li>Right-click on the email address to copy it.</li>
-    </ol>
+
+      <p>Click on the email address to send a new email to the library.</p>
+      <p>Right-click on the email address to copy it.</p>
+
   </div>
 </div>
 
