--- a/templates/info/reports.tmpl
+++ b/templates/info/reports.tmpl
@@ -309,12 +309,12 @@ $('document').ready(function(){
     </div>
   </div>
 
-  <div id="instrutions" class="tone-box">
+  <!--
+
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>None yet.</li>
-    </ol>
-  </div>
+
+  </div>-->
 
 </div>
 
