--- a/templates/info/report-folder.tmpl
+++ b/templates/info/report-folder.tmpl
@@ -174,12 +174,12 @@ $('document').ready(function(){
     </div>
   </div>
 
-  <div id="instructions">
+  <!--
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>None yet.</li>
-    </ol>
+ 
   </div>
+  -->
 
 </div>
 
