new aquisitions secondary tab

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -23,6 +23,12 @@
       </a>
     </li>
 
+    <li id="menu_myaccount_aquisitions">
+      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_aquisitions_form>
+      Aquisitions
+      </a>
+    </li>
+
   </ul>
 </div>
 
