--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -11,6 +11,11 @@ $('document').ready(function() {
 });
 </script>
 <div id="center" role="main">
+
+<div id="main-left" class="alert-box" >
+<p>This is an example of a notification.</p>
+</div>
+
 <div id="main-left" class="tone-box" >
 	<h2>Quick Links</h2>
 	<!--
