--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -12,11 +12,12 @@ $('document').ready(function() {
 </script>
 <div id="center" role="main">
 
-<div id="main-left" class="alert-box" >
+<div id="main-left" class="tone-box" >
+
+<div class="alert-box" >
 <p>This is an example of a notification.</p>
 </div>
 
-<div id="main-left" class="tone-box" >
 	<h2>Quick Links</h2>
 	<!--
 	<p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
