--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -36,7 +36,7 @@ $('document').ready(function(){
 		           ]
         	       },
                        "columnDefs": [ {
-                           "targets": 0,
+                           "targets": [0,8],
                            "visible": false
                        } ],
                      "fnInitComplete": function() {
