minor text updates

--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -39,7 +39,7 @@ $('document').ready(function(){
 <div id="center" role="main">
 
     <div id="myDiv">
-      <h2>ILL Stats</h2>
+    
 	<div class="dataTable_wrapper">
 	  <table id="datatable_report">
 	    <thead>
@@ -76,7 +76,7 @@ $('document').ready(function(){
   </div>
 
 
-  <div id="instructions">
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
 
     <h3>Borrowing</h3>
