spelling error for acquisitions

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -24,8 +24,8 @@
     </li>
 
     <li id="menu_myaccount_aquisitions">
-      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_aquisitions_form>
-      Aquisitions
+      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_acquisitions_form>
+      Acquisitions
       </a>
     </li>
 
