removed inline style from search field

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -158,7 +158,7 @@
 <div id="search-container">
   <div id="search" role="search">
     <form id="searchForm" name="search">
-      <input id="query" type="text" size="50px" placeholder="Search" value="<TMPL_VAR name='query'>">
+      <input id="query" type="text" placeholder="Search" value="<TMPL_VAR name='query'>">
       <!-- The id of the submit button is used in fILL_client-public-x.y.js in the
 	   domReady() function to automatically do the search, if the user had 
 	   filled in the search box from a different page.
