removed inline style from library side search

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -198,7 +198,7 @@ $('document').ready(function(){
   <div id="search" role="search">
     <div id="header_searchbar">
     <form id="searchForm" name="search">
-      <input id="query" type="text" size="50"/>
+      <input id="query" type="text"/>
       <input id="button" type="submit" value="Search" class="library-style" />
       <input id="help" type="submit" value="?" onClick="javascript:searchHelp(this); return false;" class="library-style">
     </form>
