--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -23,9 +23,9 @@
       </a>
     </li>
 
-    <li id="menu_myaccount_aquisitions">
-      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_aquisitions_form>
-      Aquisitions
+    <li id="menu_myaccount_acquisitions">
+      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_acquisitions_form>
+      Acquisitions
       </a>
     </li>
 
