row borders on tables

--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -34,7 +34,7 @@ $('document').ready(function(){
     <div id="myDiv">
       <div>
 	<div class="dataTable_wrapper">
-	  <table id="datatable_contacts" width="100%">
+	  <table id="datatable_contacts" class="row-border" width="100%">
 	    <thead>
 	      <tr>
 		<th>library</th><th>Symbol</th><th>Phone</th><th>Email address</th><th>Mailing address</th>
