--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -41,7 +41,7 @@ $('document').ready(function(){
     <div id="myDiv">
     
 	<div class="dataTable_wrapper">
-	  <table id="datatable_report">
+	  <table id="datatable_report" class="cell-border">
 	    <thead>
 	      <tr>
 		<th colspan="3">Date</th><th colspan="5">Borrowing</th><th colspan="5">Lending</th>
