more acquisitions stuff... and acq is now presented as "wish list"

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -25,7 +25,7 @@
 
     <li id="menu_myaccount_acquisitions">
       <a href=/cgi-bin/myaccount.cgi?rm=myaccount_acquisitions_form>
-      Acquisitions
+      Wish list
       </a>
     </li>
 
