new alert message example

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -15,7 +15,7 @@ $('document').ready(function() {
 <div id="main-left" class="tone-box" >
 
 <div class="alert-box" >
-<p>This is an example of a notification</p>
+<p>Please note that most libraries will not loan items that are considered too new.</p>
 </div>
 
 	<h2>Quick Links</h2>
