--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -446,6 +446,7 @@ input[type=text], input[type=password]
     text-transform:capitalize;
     border: 0;
     border-radius:5px;
+    background-color: #183935;
 }
 
 .library-style {
