--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -51,6 +51,24 @@ $('document').ready(function() {
 <div id="main-right" class="tone-box" role="complimentary">
   <h2>Updates</h2>
   <hr>
+  <strong>Monday 24th November Release notes</strong>
+  <p>We have a had a fantastic response from libraries across the province about the newly redesigned fILL platform. Since launching the new look, just this past Monday, we have received emails and phone calls with positive feedback and constructive critiques of the new look. This has helped the fILL development team here at PLS to further refine the fILL platform, and add improvements to make it easier than ever to manage your library's ILL workflows.</p>
+  <p>Today we are releasing a few bug fixes and some minor updated features that we think you will like.</p>
+  <h3>Updates:</h3>
+    <ul>
+      <li>Dividing lines placed in-between rows in tables</li>
+      <li>Due date bug fixed</li>
+      <li>Publication date field added to 'New patron requests' table, so you can see if an item is too new to request</li>
+      <li>New alert message on welcome page; The current alert is a reminder to be mindful when placing requests for newer items</li>
+      <li>Wish list (see below)</li>
+      <li>GID and CID, placed into 'place request' page (see below)</li>
+    </ul>
+  <h3>Wish List</h3>
+  <p>There is now a new section in fILL under 'Accounts' called 'Wish list'. The Wish list page will help you file away titles that you may wish to acquire instead of place an ILL. When viewing your 'New patron requests' you may decide that an item is too new or too popular to request through ILL, you can now choose 'Add to Wish list' and the information of the request will be placed in the Wish list page. The table on this page can then be printed or downloaded or saved as usual. If you choose to do so, you can forward the list onto your collections staff for consideration for purchase.</p>
+  <h3>GID and CID</h3>
+  <p>We had feedback from libraries about the removal of the GID and CID numbers from the tables. Previously we had thought that this functionality was only useful for the internal working of fILL. We have made the GID and CID numbers available on the 'place request' page for your reference. Some libraries have noted that they use the numbers to track Canada Post items, we are currently investigating how we can use the Canada Post tracking number to address this issue.</p>
+ 
+  <hr>
   <strong>18th November 2014</strong>
   <h3>Refresh of the fILL Librarian interface</h3>
   <p>We hope your patrons have discovered the fresh public face of fILL and that the redisign has made their experience and your ILL workflows easier.
