change to release notes

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -52,17 +52,17 @@ $('document').ready(function() {
   <h2>Updates</h2>
   <hr>
   <strong>Monday 24th November Release notes</strong>
-  <p>We have a had a fantastic response from libraries across the province about the newly redesigned fILL platform. Since launching the new look, just this past Monday, we have received emails and phone calls with positive feedback and constructive critiques of the new look. This has helped the fILL development team here at PLS to further refine the fILL platform, and add improvements to make it easier than ever to manage your library's ILL workflows.</p>
-  <p>Today we are releasing a few bug fixes and some minor updated features that we think you will like.</p>
-  <h3>Updates:</h3>
-    <ul>
-      <li>Dividing lines placed in-between rows in tables</li>
-      <li>Due date bug fixed</li>
-      <li>Publication date field added to 'New patron requests' table, so you can see if an item is too new to request</li>
-      <li>New alert message on welcome page; The current alert is a reminder to be mindful when placing requests for newer items</li>
-      <li>Wish list (see below)</li>
-      <li>GID and CID, placed into 'place request' page (see below)</li>
-    </ul>
+  <p>We invited your first impressions about the newly redesigned fILL platform and we've received a great response from libraries across the province.</p>
+  <p>Since re-launching the platform on November 18th, the fILL development team has been working to incorporate great ideas raised by the library community, address some of your critiques and further refine the platform in order to make improvements that can benefit all invested in resource sharing; from creating a more responsive user experience and effective operations to management and policy controls in order to make it easier than ever to manage your library's ILL workflows.</p>
+  <p>We hope the fixes and features released today are helpful to you and your colleagues:</p>
+  <ul>
+    <li>Dividing lines placed in-between rows in tables, to clearly indicate which buttons belong to which records</li>
+    <li>Due date bug fixed - the default date no longer overrides the date you entered</li>
+    <li>Publication date field added to 'New patron requests' table, so you can see if an item is too new to request</li>
+    <li>New alert message on welcome page; The current alert is a reminder to be mindful when placing requests for newer items</li>
+    <li>Wish list (see below)</li>
+    <li>GID and CID, placed into 'place request' page (see below)</li>
+  </ul>
   <h3>Wish List</h3>
   <p>There is now a new section in fILL under 'Accounts' called 'Wish list'. The Wish list page will help you file away titles that you may wish to acquire instead of place an ILL. When viewing your 'New patron requests' you may decide that an item is too new or too popular to request through ILL, you can now choose 'Add to Wish list' and the information of the request will be placed in the Wish list page. You can also 'Add to Wish list' from the Unfilled tab.  The table on this page can then be printed or downloaded or saved as usual. If you choose to do so, you can forward the list onto your collections staff for consideration for purchase.</p>
   <p><strong>Note:</strong> moving requests to the wish list cancels the ILL, so you may want to contact your patron beforehand to let them know.</p>
