--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -28,15 +28,15 @@ $('document').ready(function() {
 	<ul>
 	<li><a href="https://fill.sitka.bclibraries.ca/">Public fILL access</a></li>
 	<li><a href="/Patron_Guide.pdf">Patron brochure</a></li>
-	<li><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></li>
+	<li><a href="/patrons-searching-tutorial.pdf">Patron tutorial on Searching and Requesting</a></li>
 	</ul>
 
 	<p><strong>Library fILL</strong></p>
 	<ul>
 	<li><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></li>
-	<li><a href="?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
-	<li><a href="?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
-	<li><a href="?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
+	<li><a href="/cgi-bin/info.cgi?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
+	<li><a href="/cgi-bin/info.cgi?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
+	<li><a href="/cgi-bin/info.cgi?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
 	</ul>
 
 	<p><strong>Counting Opinions</strong></p> 	
