--- a/templates/public-original/search.tmpl
+++ b/templates/public-original/search.tmpl
@@ -70,7 +70,7 @@ $('document').ready(function(){
   <div id="header_searchbar">
     <form id="searchForm" name="search">
       <label for="query">Enter search terms:</label>
-      <input id="query" type="text" size="50"/>
+      <input id="query" type="text" size=""/>
       <input id="button" type="submit" value="Search"/>
       <input id="help" type="submit" value="?" onClick="javascript:searchHelp(this); return false;">
     </form>
