new covers class update
this is for when you want to use less covers

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -344,6 +344,14 @@ nav li a
     margin-top: 2em;
     margin: .3em;
 }
+
+.covers4 {
+	height: 220px;
+    width: 160px;
+    margin-top: 2em;
+    margin: .3em;
+}
+
 .covers:hover {
 }
 
