--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -198,16 +198,16 @@
 	     The keywords to search for are taken from the "title" attribute.
 	-->
         <a href="#" class="coverlink" title="Craig Davidson, Cataract City" >
-    <img class="covers" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg">
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg">
   </a>
 <a href="#" class="coverlink" title="Lisa Moore, Caught">
-    <img class="covers" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg">
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg">
   </a>
 <a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid">
-    <img class="covers" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg">
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg">
   </a>
 <a href="#" class="coverlink" title="Dennis Bock, Going Home Again">
-    <img class="covers" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg">
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg">
   </a>
        <p><strong>Giller Prize 2013 shortlist</strong></p> 
       </div>
