--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -51,6 +51,12 @@ $('document').ready(function() {
 <div id="main-right" class="tone-box" role="complimentary">
   <h2>Updates</h2>
   <hr>
+  <strong>Monday 8th December Release notes</strong>
+  <p>New functionality: Advanced Search</p>
+  <p>Based on feedback from the library community, we've implemented an 'Advanced search' which will help you to build the proper query for title/author/subject/series searches.</p>
+  <p>On the Search page ("Borrowing" -> "Search"), click on the 'Advanced' button at the end of the search box.  This will display the advanced fields.  Enter your information and click the 'Search' button; the system will turn your title/author/subject/series phrases into the required format and perform the search.</p>
+  <p>The query built from your phrases will be displayed in the search bar.</p>
+  <hr>
   <strong>Monday 24th November Release notes</strong>
   <p>We invited your first impressions about the newly redesigned fILL platform and we've received a great response from libraries across the province.</p>
   <p>Since re-launching the platform on November 18th, the fILL development team has been working to incorporate great ideas raised by the library community, address some of your critiques and further refine the platform in order to make improvements that can benefit all invested in resource sharing; from creating a more responsive user experience and effective operations to management and policy controls in order to make it easier than ever to manage your library's ILL workflows.</p>
