new content area
testing out an older idea that will help with contrast on the site.
will also help with mobile optimization down the track.

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -68,10 +68,15 @@ h3 {
 #container
 {
 	margin: auto;
-
-	width: 90%;
+	background: #aaa;
+	width: 1000%;
 	height: auto;
 	clear: both;  /* start fresh with floatiness within the container */
+}
+
+#content {
+	width: 70%;
+	margin: auto;
 }
 
 /**HEADER STYLES**/
