--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -93,6 +93,7 @@ $('document').ready(function(){
 <body class="example_alt_pagination">
 
 <div id="container">
+<div id="content">
 <!--header template from public folder-->
 
 <!--***************ARIA MARKER 'BANNER'***************-->
@@ -115,7 +116,9 @@ $('document').ready(function(){
         <p><TMPL_VAR name="library"></p>
         <p style="display:none"><TMPL_VAR name="lid"></p>
 
-	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
+	     <input id="incrFont" class="public-style" type="button" value="+A" />
+        <input id="decrFont" class="public-style" type="button" value="-A" />
+
     </div>
   </div>
 
