--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -22,7 +22,7 @@
 </footer>
 
 <div id="bison-container">
-  <!--<a href="http://www.gov.mb.ca/chc/"><img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif"></a>-->
+  <a href="http://www.gov.mb.ca/chc/"><img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif"></a>
 </div>
 
 </div>
