--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -6,7 +6,7 @@
 <div id="nav2">
   
     <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a><span style="color:#aabdba;"> | </span><a href="?authen_logout=1">Log out</a>
-
+</div>
   <p>
     <!-- The id="username" div is necessary: the username gets extracted (in 
 	 fILL_client-public-x.y.js), and passed to the code that allows the patron 
