--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -93,6 +93,7 @@ $('document').ready(function(){
 <body class="example_alt_pagination">
 
 <div id="container">
+<div id="content">
 <!--header template from public folder-->
 
 <!--***************ARIA MARKER 'BANNER'***************-->
