--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -24,8 +24,8 @@
 <div id="bison-container">
   <a href="http://www.gov.mb.ca/chc/"><img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif"></a>
 </div>
-
-</div>
+</div><!--div id content-->
+</div><!--div id container-->
 
 </body>
 </html>
