--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -38,7 +38,11 @@ $('document').ready(function(){
                        "columnDefs": [ {
                            "targets": [0,1,2,4],
                            "visible": false
-                       } ],
+                       },
+	               {
+	                   "targets": 10,
+                           "width": "15%"
+                       }],
                       "fnInitComplete": function() {
                            // this handles a bug(?) in this version of datatables;
                            // hidden columns caused the table width to be set to 100px, not 100%
