--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -98,26 +98,26 @@ $('document').ready(function(){
 <!--***************ARIA MARKER 'BANNER'***************-->
 <header role="banner">
 
-  <div id="header-left">
+  <!--><div id="header-left">
     <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
     <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
   </div>
 
   <div id="header-right">
     <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button" class="public-style">log out</a></div>
-    <div id="patron-info">
+    <div id="patron-info">-->
   <!-- The id="username" div is necessary: the username gets extracted (in 
        fILL_client-public-x.y.js), and passed to the code that allows the patron 
        to make an ILL request (we need to know who is making the request :-)
        It doesn't have to be *here*, but it has to be somewhere....
     -->
-        <div id="username"><TMPL_VAR name="username"></div>
+        <!--<div id="username"><TMPL_VAR name="username"></div>
         <p><TMPL_VAR name="library"></p>
         <p style="display:none"><TMPL_VAR name="lid"></p>
 
 	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
     </div>
-  </div>
+  </div>-->
 
 </header>
     
@@ -147,5 +147,5 @@ $('document').ready(function(){
   </div>
 </div> <!-- search-container -->
 
-</div><!--container div-->
+
 <!-- Begin content -->
